# Q-Zandronum-Web

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  qzandronum.ini
bootslider/: admin.py  apps.py  models.py
bootslider/migrations/: 0001_initial.py  0002_auto_20221227_0730.py  0003_auto_20230101_2028.py  0004_auto_20230310_1728.py  0005_alter_sliderimage_preview.py
bootslider/static/bs-slider/: carousel.js
builds/: admin.py  forms.py  models.py  storage.py  urls.py  views.py
builds/locale/ru/LC_MESSAGES/: django.po
builds/management/commands/: test_private_files.py
builds/migrations/: 0001_initial.py  0002_data_migration.py  0003_add_priority_and_help_texts.py  0004_auto_20210316_0807.py  0005_chunkeduploaditem.py  0006_auto_20221204_1532.py  0007_auto_20230307_1613.py  0008_auto_20230421_1600.py  0009_alter_build_checksum_a_alter_qcdebuild_checksum_a.py
builds/static/builds-js/: jquery.fileupload.js
builds/templates/: builds_upload.html
builds/templates/admin/builds/qcdebuild/: change_list_object_tools.html
core/: admin.py  models.py  urls.py  views.py
core/locale/ru/LC_MESSAGES/: django.mo  django.po
core/migrations/: 0001_initial.py  0002_add_help_texts.py
core/sass/: _common.sass  _pythonvars.sass  main.sass
core/static/: main.css  qcde.css
core/static/js/: qcde.js
core/templates/: Installing_QCDE_on_Linux.html  base.html  base_qz.html  index.html  qcde_index.html  snip.download_item.html  snip.link_item.html  sniplates_widgets.html  z-base.html
core/templates/registration/: login.html
qzandronum/: asgi.py  settings.py  urls.py  wsgi.py
qzandronum/conf/: nginx.qzw.conf
qzandronum/locale/ru/LC_MESSAGES/: django.mo  django.po
