[tool.poetry]
name = "qzandronum_site"
version = "0.54.3a0"
description = "Django website for Qzandronum project"
authors = ["Gin Fuyou <devel@doratoa.net>"]

[tool.poetry.dependencies]
python = "^3.10.6"
pre-commit = "~2"
django-classy-settings = "^2.1"
Django = "3.2.*"
django-debug-toolbar = "~2"
celestia = { git = "https://gitlab.com/GinFuyou/django-celestia.git", rev = "11a6a6cc3b05899ff604a58e3a7987b97c3e1c78"  }

pip = ">=20.2.4"
bleach = "^3.2"
django-sniplates = ">=0.7.1"
uWSGI = "^2.0.21"
psycopg2 = "^2.8.6"
django-chunked-upload =  { git = "https://github.com/tngeene/django-chunked-upload.git", rev = "7bc88b6" }
httpagentparser = "^1.9.5"
pillow = "10.*"
django-sendfile2 = "^0.7.0"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
isort = {extras = ["pyproject"], version = "^5.6.4"}
black = "^20.8b1"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."qzandronum/settings.py"]

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "W", "F", "I001", "D"]
ignore = ["D101", "D102", "D103", "D105", "D106", "D212"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["F4", "W", "I001", "E7", "D"]
unfixable = []

line-length = 128
